# opentiertask

./: .gitignore  CMakeLists.txt  Cargo.toml  SOLUTION.md
src/: lib.rs  server.rs
tests/: client.rs
